--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
     .upload-area { border: 2px dashed var(--color-border); border-radius: var(--border-radius); padding: 20px; text-align: center; cursor: pointer; transition: var(--transition); }
     .upload-area:hover { border-color: var(--color-primary); background-color: #f8f9fa; }
     
-    /* CORREÇÃO: Layout dos botões do cabeçalho */
     .card-header-actions {
         display: flex;
         justify-content: space-between;
@@ -205,26 +204,27 @@
         gap: 15px;
         margin-bottom: 20px;
     }
-
     .card-header-actions .button-group {
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
-        justify-content: flex-end;
     }
-
     .card-header-actions .button-group button {
-        width: auto;
-        max-width: none;
-        flex-shrink: 0;
+        margin-top: 0; /* Override default margin */
     }
-    /* FIM DA CORREÇÃO */
     
     @media (max-width: 768px) {
         header h1 { font-size: 18px; max-width: calc(100% - 120px); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         #logoutInfo { flex-direction: column; align-items: flex-end; gap: 5px; padding: 6px 10px; }
         .card { padding: 16px; }
         #harvestPlanTable th, #harvestPlanTable td { padding: 8px; font-size: 12px; }
+        .card-header-actions {
+            flex-direction: column;
+            align-items: stretch;
+        }
+        .card-header-actions .button-group {
+            justify-content: center;
+        }
     }
     </style>
 </head>
@@ -309,9 +309,9 @@
             <div class="card-header-actions">
                 <h2 style="color: var(--color-success); margin-bottom: 0;"><i class="fas fa-tractor"></i> Planeamento de Colheita</h2>
                 <div class="button-group">
-                    <button id="btnGeneralHarvestReportPDF" class="btn-secondary" style="margin-top:0; background: var(--color-danger);"><i class="fas fa-file-pdf"></i> Relatório PDF</button>
-                    <button id="btnGeneralHarvestReportExcel" class="btn-secondary" style="margin-top:0; background: var(--color-primary-dark);"><i class="fas fa-file-excel"></i> Relatório Excel</button>
-                    <button id="btnAddNewHarvestPlan" class="save" style="margin-top:0;"><i class="fas fa-plus"></i> Novo Plano</button>
+                    <button id="btnGeneralHarvestReportPDF" class="btn-secondary" style="background: var(--color-danger);"><i class="fas fa-file-pdf"></i> Relatório PDF</button>
+                    <button id="btnGeneralHarvestReportExcel" class="btn-secondary" style="background: var(--color-primary-dark);"><i class="fas fa-file-excel"></i> Relatório Excel</button>
+                    <button id="btnAddNewHarvestPlan" class="save"><i class="fas fa-plus"></i> Novo Plano</button>
                 </div>
             </div>
 
